# ArduinoHero

./: .gitignore  MK_slow_simple.ino  MK_slow_simple_easy.ino  Megalovania.ino  Megalovania_easy.ino  README.md  setupinv.bat
Client/: Buttons.ino  Client.ino  Client.ino.standard.hex  Client.ino.with_bootloader.standard.hex  Heap.cpp  Heap.h  Leds.ino  MK_slow_simple_easy.ino  Megalovania.cpp  Megalovania_easy.cpp  Screen.ino  Song.cpp  Song.h  Transmitter.ino  ptTest.ino
Client/midis/: MK_orchestra.ino  MK_orchestra.mid  MK_orchestra_easy.ino  MK_violin.mid  Megalovania.ino  Megalovania_easy.ino  You Say Run Piano Cover.mid
MidiToArduino/: CppBuilder.cs  MidiToArduino.csproj  MidiToArduino.sln  MidiToArduino.sln.DotSettings  Program.cs  Util.cs
MidiToArduino/MidiToArduino/: ArduinoBuilder.cs  MidiToArduino.csproj  Program.cs  Song.cs  Util.cs  packages.config
MidiToArduino/MidiToArduino/Properties/: AssemblyInfo.cs
MidiToArduino/song/: AhNote.cs  AhSong.cs  SongManipulation.cs  UnproccessedNote.cs  UnproccessedSong.cs
Server/: Joystick.ino  Server.ino
cpp/: CMakeLists.txt  MK_slow_simple_easy.cpp  MK_slow_simple_easy.h  Util.cpp  Util.h  main.cpp  orchestra.cpp  orchestra.h  song.cpp  song.h
cpp/PROGMEM_readAnything/: PROGMEM_readAnything.h
libs/TFT9341/: TFT9341.cpp  TFT9341.h  spiUnit.cpp  spiUnit.h  touch.cpp  touch.h
libs/TFT9341/examples/Example3_1/: Example3_1.ino
libs/TFT9341/examples/Example3_10/: Example3_10.ino
libs/TFT9341/examples/Example3_11/: Example3_11.ino  print.ino  testTouch.ino
libs/TFT9341/examples/Example3_12/: bitmap.ino  (+5 more)
(+15 files in other folders)
